--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
 <body>
     <div class="flexBox">
         <div class="profileBox">
-
+            <a href="https://www.google.com"><img src="./assets/cc_logo.PNG" class="logo"></a>
         </div>
         <div class="chatBox">
 
