--- a/public/chat.html
+++ b/public/chat.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
-    <link rel="stylesheet" href="./chatStyle.css">
+    <!-- <link rel="stylesheet" href="./chatStyle.css"> -->
+    <link href="../dist/output.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="flexBox">
         <div class="profileBox">
+
             <a href="https://www.google.com"><img src="./assets/cc_logo.PNG" class="logo"></a>
         </div>
-        <div class="chatBox">
+        <div class=" chatBox">
 
             <div class="bottomChat">
                 <input type="text" class="typeBox" id="message">
                 </input>
 
-                <!-- <button class="emojiButton" onclick="functionAAA()">
+                <button class="emojiButton" onclick="functionAAA()">
                     <img src="./assets/emojiChat.png" alt="Emoji Button">
-                </button> -->
+                </button>
 
             </div>
         </div>
