--- a/public/chat.html
+++ b/public/chat.html
@@ -21,9 +21,9 @@
                 <input type="text" class="typeBox" id="message">
                 </input>
 
-                <button class="emojiButton" onclick="functionAAA()">
-                    <img src="./assets/emojiChat.png" alt="Emoji Button">
-                </button>
+
+                <img src="./assets/emojiChat.png" class="max-w-none me-15" alt="Emoji Button" onclick="alert('เด้ง Modal จ้า')">
+
 
             </div>
         </div>
