--- a/public/chat.html
+++ b/public/chat.html
@@ -7,27 +7,51 @@
     <title>Chat</title>
     <!-- <link rel="stylesheet" href="./chatStyle.css"> -->
     <link href="../dist/output.css" rel="stylesheet">
+    <!-- <link href="./chatStyle.css" rel="stylesheet"> -->
+    <!-- <link href="./input.css" rel="stylesheet"> -->
 </head>
 
-<body>
-    <div class="flexBox">
-        <div class="profileBox">
-
-            <a href="https://www.google.com"><img src="./assets/cc_logo.PNG" class="logo"></a>
+<body class="bg-color01">
+    <div class="flex h-screen">
+        <div class="w-1/5 profileBox bg-white ml-5 mr-1 my-5 rounded-2xl p-5">
+            <a href="https://www.google.com"><img src="./assets/cc_logo.png" class="logo"></a>
+            <!-- <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p>
+            <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p>
+            <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p> -->
         </div>
-        <div class=" chatBox">
-
-            <div class="bottomChat">
-                <input type="text" class="typeBox" id="message">
-                </input>
-
-
-                <img src="./assets/emojiChat.png" class="max-w-none me-15" alt="Emoji Button" onclick="alert('เด้ง Modal จ้า')">
+        <div class="w-4/5 chatBox bg-color02 mr-5 ml-1 my-5 rounded-2xl p-5 relative">
+            <div class="overflow-auto h-[96%] m-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+            </div>
+            <div class="w-[90%] flex justify-center sticky bottom-0 mb-4 rounded" name="buttomChat">
+                <input type="text" class="w-[60%] rounded-xl bg-white mx-auto p-1 px-4" id="input"></input>
+                <!-- <img src="./assets/emojiChat.png" class="block" alt="Emoji Button" onclick="alert('เด้ง Modal จ้า')"> -->
 
 
             </div>
         </div>
-    </div>
 
 </body>
 
