--- a/public/chat.html
+++ b/public/chat.html
@@ -7,7 +7,7 @@
     <title>Chat</title>
     <!-- <link rel="stylesheet" href="./chatStyle.css"> -->
     <link href="../dist/output.css" rel="stylesheet">
-    <!-- <link href="./chatStyle.css" rel="stylesheet"> -->
+    <link href="./output.css" rel="stylesheet">
     <!-- <link href="./input.css" rel="stylesheet"> -->
 </head>
 
