--- a/public/chat.html
+++ b/public/chat.html
@@ -7,7 +7,7 @@
     <title>Chat</title>
     <!-- <link rel="stylesheet" href="./chatStyle.css"> -->
     <link href="../dist/output.css" rel="stylesheet">
-    <link href="./output.css" rel="stylesheet">
+    <!-- <link href="./output.css" rel="stylesheet"> -->
     <!-- <link href="./input.css" rel="stylesheet"> -->
 </head>
 
@@ -20,30 +20,77 @@
             <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p> -->
         </div>
         <div class="w-4/5 chatBox bg-color02 mr-5 ml-1 my-5 rounded-2xl p-5 relative">
+            <h1 class="text-center">Chatting Room</h1>
             <div class="overflow-auto h-[96%] m-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                <!-- คู่สนทนา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+
+                <!-- เรา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                </div>
+                <!-- คู่สนทนา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+
+                <!-- เรา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                </div>
+                <!-- คู่สนทนา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+
+                <!-- เรา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                </div>
+                <!-- เรา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                </div>
+                <!-- คู่สนทนา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+                <!-- คู่สนทนา -->
+                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+
+
+
             </div>
             <div class="w-[90%] flex justify-center sticky bottom-0 mb-4 rounded" name="buttomChat">
                 <input type="text" class="w-[60%] rounded-xl bg-white mx-auto p-1 px-4" id="input"></input>
