--- a/public/chat.html
+++ b/public/chat.html
@@ -9,90 +9,93 @@
     <link href="../dist/output.css" rel="stylesheet">
     <!-- <link href="./output.css" rel="stylesheet"> -->
     <!-- <link href="./input.css" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
 </head>
 
 <body class="bg-color01">
     <div class="flex h-screen">
-        <div class="w-1/5 profileBox bg-white ml-5 mr-1 my-5 rounded-2xl p-5">
+        <div class="w-0 lg:w-1/5 lg:profileBox lg:bg-white lg:ml-5 lg:mr-1 lg:my-5 lg:rounded-2xl lg:p-5">
             <a href="https://www.google.com"><img src="./assets/cc_logo.png" class="logo"></a>
             <!-- <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p>
             <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p>
             <p class="underline decoration-wavy"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quisquam consequatur ad earum, ducimus unde porro repellat ipsum, necessitatibus blanditiis at aperiam, sint dolorum nam quas officia? Facilis, dolores voluptatum.</p> -->
         </div>
-        <div class="w-4/5 chatBox bg-color02 mr-5 ml-1 my-5 rounded-2xl p-5 relative">
-            <h1 class="text-center">Chatting Room</h1>
+        <div class="w-full lg:w-4/5 chatBox bg-color02 mr-5 ml-5 lg:ml-1 my-5 rounded-2xl p-5 relative">
+            <h3 class="text-center text-3xl font-cherry"> Chickchat Room #<span class="" id="roomID">000192</span> </h3>
             <div class="overflow-auto h-[96%] m-2">
                 <!-- คู่สนทนา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
                     <div class="bg-white p-2 rounded-r-2xl">
                         <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
                     </div>
                 </div>
 
                 <!-- เรา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
                     <div class="bg-white p-2 rounded-l-2xl">
                         <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
                     </div>
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
                 </div>
                 <!-- คู่สนทนา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
                     <div class="bg-white p-2 rounded-r-2xl">
                         <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
                     </div>
+                </div>
+                <!-- เรา -->
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl whitespace-normal">
+                        <p class="text-start ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
+                </div>
+                <!-- เรา -->
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
+                </div>
+                <!-- คู่สนทนา -->
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+                <!-- เรา -->
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
+                </div>
+                <!-- คู่สนทนา -->
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl">
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
+                    <div class="bg-white p-2 rounded-r-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                </div>
+                <!-- เรา -->
+                <div class="flex w-4/6 lg:w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
+                    <div class="bg-white p-2 rounded-l-2xl">
+                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
+                    </div>
+                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300 cursor-pointer"></div>
                 </div>
 
-                <!-- เรา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
-                    <div class="bg-white p-2 rounded-l-2xl">
-                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                    </div>
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
-                </div>
-                <!-- คู่สนทนา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
-                    <div class="bg-white p-2 rounded-r-2xl">
-                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                    </div>
-                </div>
 
-                <!-- เรา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
-                    <div class="bg-white p-2 rounded-l-2xl">
-                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                    </div>
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
-                </div>
-                <!-- เรา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl ml-auto justify-end mr-5">
-                    <div class="bg-white p-2 rounded-l-2xl">
-                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                    </div>
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
-                </div>
-                <!-- คู่สนทนา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
-                    <div class="bg-white p-2 rounded-r-2xl">
-                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                    </div>
-                </div>
-                <!-- คู่สนทนา -->
-                <div class="flex w-full mt-2 space-x-3 max-w-2xl">
-                    <div class="flex-shrink-0 h-10 w-10 rounded-full bg-gray-300"></div>
-                    <div class="bg-white p-2 rounded-r-2xl">
-                        <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eius voluptatem libero ab iste qui odio aut, fugit, earum itaque autem, repellat perferendis. At recusandae earum laboriosam, ad perspiciatis harum.</p>
-                    </div>
-                </div>
 
 
 
             </div>
-            <div class="w-[90%] flex justify-center sticky bottom-0 mb-4 rounded" name="buttomChat">
+            <div class="w-[100%] flex justify-center sticky bottom-8 lg:bottom-10 rounded form-input" name="buttomChat">
                 <input type="text" class="w-[60%] rounded-xl bg-white mx-auto p-1 px-4" id="input"></input>
                 <!-- <img src="./assets/emojiChat.png" class="block" alt="Emoji Button" onclick="alert('เด้ง Modal จ้า')"> -->
 
