--- a/ChickChatDressing/clothes.html
+++ b/ChickChatDressing/clothes.html
@@ -26,40 +26,40 @@
                 </div>
             </div>
             <div class="face-box">
-                <button class="clothes-item" id="clothesSelect1" data-image="clothes_avatar/clothes_1.PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_1.PNG" class="img img-1">
+                <button class="clothes-item" id="clothesSelect1" data-image="../ImageAsset/Clothes/Clothes1.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes1.PNG" class="img img-1">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect2" data-image="clothes_avatar/clothes_2 (2).PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_2 (2).PNG" class="img img-2">
+                <button class="clothes-item" id="clothesSelect2" data-image="../ImageAsset/Clothes/Clothes2.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes2.PNG" class="img img-2">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect3" data-image="clothes_avatar/clothes_3.PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_3.PNG" class="img img-3">
+                <button class="clothes-item" id="clothesSelect3" data-image="../ImageAsset/Clothes/Clothes3.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes3.PNG" class="img img-3">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect4" data-image="clothes_avatar/clothes_3.PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_3.PNG" class="img img-4">
+                <button class="clothes-item" id="clothesSelect4" data-image="../ImageAsset/Clothes/Clothes4.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes4.PNG" class="img img-4">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect5" data-image="clothes_avatar/clothes_1.PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_1.PNG" class="img img-5">
+                <button class="clothes-item" id="clothesSelect5" data-image="../ImageAsset/Clothes/Clothes5.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes5.PNG" class="img img-5">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect6" data-image= "clothes_avatar/clothes_2 (2).PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_2 (2).PNG" class="img img-7">
+                <button class="clothes-item" id="clothesSelect6" data-image= "../ImageAsset/Clothes/Clothes13.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes13.PNG" class="img img-7">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect7" data-image= "clothes_avatar/clothes_3.PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_3.PNG" class="img img-8">
-                    <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
-                </button>
-                <button class="clothes-item" id="clothesSelect8" data-image="clothes_avatar/clothes_1.PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_1.PNG" class="img img-9">
+                <button class="clothes-item" id="clothesSelect7" data-image= "../ImageAsset/Clothes/Clothes7.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes7.PNG" class="img img-8">
                     <div class="lock"><i class="fa-solid fa-lock"></i></div>
                 </button>
-                <button class="clothes-item" id="clothesSelect9" data-image="clothes_avatar/clothes_2 (2).PNG" onclick="checkStatus(this)">
-                    <img src="clothes_avatar/clothes_2 (2).PNG" class="img img-6">
+                <button class="clothes-item" id="clothesSelect8" data-image="../ImageAsset/Clothes/Clothes12.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes12.PNG" class="img img-9">
+                    <div class="lock"><i class="fa-solid fa-lock"></i></div>
+                </button>
+                <button class="clothes-item" id="clothesSelect9" data-image="../ImageAsset/Clothes/Clothes9.PNG" onclick="checkStatus(this)">
+                    <img src="../ImageAsset/Clothes/Clothes9.PNG" class="img img-6">
                     <div class="lock"><i class="fa-solid fa-lock"></i></div>
                 </button>
             </div>
