--- a/ChickShop/chickShop.html
+++ b/ChickShop/chickShop.html
@@ -27,22 +27,28 @@
         <div class="shop-zone avatar-shop active">
             <div class="wrapper">
                 <div class="item">
-                    <img src="image/IMG_0991.PNG" alt="">
+                    <img src="../ImageAsset/Clothes/Clothes7.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
-                    <img src="image/IMG_0991.PNG" alt="">
+                    <img src="../ImageAsset/Clothes/Clothes12.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
-                    <img src="image/IMG_0991.PNG" alt="">
+                    <img src="../ImageAsset/Clothes/Clothes9.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
-                    <img src="image/IMG_0991.PNG" alt="">
+                    <img src="../ImageAsset/Face/Face7.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
-                    <img src="image/IMG_0991.PNG" alt="">
+                    <img src="../ImageAsset/Face/Face7.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
-                    <img src="image/IMG_0991.PNG" alt="">
+                    <img src="../ImageAsset/Face/Face7.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
             </div>
         </div>
@@ -50,21 +56,27 @@
             <div class="wrapper">
                 <div class="item">
                     <img src="image/IMG_0993.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
                     <img src="image/IMG_0993.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
                     <img src="image/IMG_0993.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
                     <img src="image/IMG_0993.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
                     <img src="image/IMG_0993.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
                 <div class="item">
                     <img src="image/IMG_0993.PNG" alt="">
+                    <div class="price">${Price}</div>
                 </div>
             </div>
         </div> 
