update chick shop

--- a/ChickShop/chickShop.html
+++ b/ChickShop/chickShop.html
@@ -18,6 +18,12 @@
             <button class="no">NO</button>
         </div>
     </div>
+    <div class="successful">
+        <div class="successful-title">การซื้อเสร็จสิ้น</div>
+        <div class="successful-button">
+            <button class="ok">OK</button>
+        </div>
+    </div>
     <header>
         <img src="image/IMG_1012.PNG" class="logo">
         <div class="chicken">
@@ -102,8 +108,10 @@
         const home = document.getElementById('home');
         const items = document.querySelectorAll('.item');
         const confirmBox = document.querySelector('.confirm-box');
+        const successful = document.querySelector('.successful');
         const yes = document.querySelector('.yes');
         const no = document.querySelector('.no');
+        const ok = document.querySelector('.ok');
 
         avatarShopBtn.addEventListener('click', () => {
             console.log('click on avatar shop');
@@ -124,9 +132,8 @@
         });
 
         function handleYesClick() {
-            console.log('Confirm for Item.');
+            console.log(`Confirm.`);
 
-            // Decrease the count and remove the event listener after three clicks
             const yesButton = document.querySelector('.yes');
             let clickCount = parseInt(yesButton.dataset.clickCount) || 0;
             clickCount++;
@@ -134,6 +141,10 @@
             if (clickCount >= 100) {
                 yesButton.removeEventListener('click', handleYesClick);
             }
+            
+            confirmBox.classList.remove('active');
+            successful.classList.add('active');
+            ok.addEventListener('click', handleOK);
 
             yesButton.dataset.clickCount = clickCount;
         }
@@ -149,6 +160,11 @@
             no.addEventListener('click', () => {
                 confirmBox.classList.remove('active');
             })
+        }
+
+        function handleOK() {
+            successful.classList.remove('active');
+            console.log("successful");
         }
 
         for (let i = 1; i <= 12; i++) {
