--- a/ChickShop/chickShop.html
+++ b/ChickShop/chickShop.html
@@ -104,18 +104,6 @@
         const confirmBox = document.querySelector('.confirm-box');
         const yes = document.querySelector('.yes');
         const no = document.querySelector('.no');
-        const id1 = document.getElementById('1');
-        const id2 = document.getElementById('2');
-        const id3 = document.getElementById('3');
-        const id4 = document.getElementById('4');
-        const id5 = document.getElementById('5');
-        const id6 = document.getElementById('6');
-        const id7 = document.getElementById('7');
-        const id8 = document.getElementById('8');
-        const id9 = document.getElementById('9');
-        const id10 = document.getElementById('10');
-        const id11 = document.getElementById('11');
-        const id12 = document.getElementById('12');
 
         avatarShopBtn.addEventListener('click', () => {
             console.log('click on avatar shop');
@@ -198,7 +186,7 @@
         // })
 
         home.addEventListener('click', () => {
-            window.location.href = '../ChickChatHome/home.html';
+            window.location.href = '../ChickChatHome/home.php';
         })
     </script>
 </body>
