--- a/ChickChatDressing/Dressing.html
+++ b/ChickChatDressing/Dressing.html
@@ -40,52 +40,26 @@
         <div class="box box-3">
             <form action="#">
                 <div class="input-box">
-                    <ul>
-                        <li class="menu-item">
-                            <p>Tag<i class="fa-solid fa-caret-down"></i></p>
-                            <ul class="dropdown">
-                                <li>
-                                    <p class="tag">Tag-1</p>
-                                </li>
-                                <li>
-                                    <p class="tag">Tag-2</p>
-                                </li>
-                                <li>
-                                    <p class="tag">Tag-3</p>
-                                </li>
-                                <li>
-                                    <p class="tag">Tag-4</p>
-                                </li>
-                                <li>
-                                    <p class="tag">Tag-5</p>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <select name="" id="Status">
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-2</option>
+                        <option value="">Tag-3</option>
+                        <option value="">Tag-4</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                    </select>
                 </div>
                 <div class="input-box">
-                    <ul>
-                        <li class="menu-item2">
-                            <p>Tag<i class="fa-solid fa-caret-down"></i></p>
-                            <ul class="dropdown">
-                                <li>
-                                    <p class="tag-2">Tag-1</p>
-                                </li>
-                                <li>
-                                    <p class="tag-2">Tag-2</p>
-                                </li>
-                                <li>
-                                    <p class="tag-2">Tag-3</p>
-                                </li>
-                                <li>
-                                    <p class="tag-2">Tag-4</p>
-                                </li>
-                                <li>
-                                    <p class="tag-2">Tag-5</p>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <select name="" id="Status">
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                        <option value="">Tag-1</option>
+                    </select>
                 </div>
                 <div class="input-box description">
                     <textarea id="message" name="message" rows="8" required></textarea>
