--- a/ChickChatHome/home.html
+++ b/ChickChatHome/home.html
@@ -16,11 +16,21 @@
         <div class="message-box">
             <div class="message">hello</div>
             <div class="message">hello</div>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
-            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam
+                aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro
+                suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam
+                aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro
+                suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam
+                aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro
+                suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam
+                aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro
+                suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam
+                aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro
+                suscipit voluptate autem voluptatibus ipsa.</div>
         </div>
     </div>
     <div class="container">
@@ -92,7 +102,7 @@
     </div>
     <div class="HowToUse" style="display: none;">
         <div class="container-HowToUse">
-            <div class="slider-wrapper"> 
+            <div class="slider-wrapper">
                 <button class="slide-button" id="prev-slide"><i class="fa-solid fa-arrow-left"></i></button>
                 <div class="image-list">
                     <div>
@@ -118,17 +128,22 @@
                         <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
                         <h1 class="subtitle">Create Avatar</h1>
                         <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
-                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>                    </div>
+                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>
+                    </div>
                     <div>
-                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
-                        <h1 class="subtitle">Create Avatar</h1>
-                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
-                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>                    </div>
+                        <img src="../ImageAsset/ScreenShot/Screenshot 2023-12-11 105553.png" alt="img-1"
+                            class="image-item">
+                        <h1 class="subtitle">Avatar shop</h1>
+                        <p class="description">user สามารถตกแต่ง <u>avatar</u>
+                            ได้ตามความชอบโดยสามารถซื้อไอเท็มตกแต่งได้ที่ <u>Avatar shop</u> โดยจะใช้น่องไก่ในการซื้อ</p>
+                    </div>
                     <div>
-                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
-                        <h1 class="subtitle">Create Avatar</h1>
-                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
-                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>                    </div>
+                        <img src="../ImageAsset/ScreenShot/Screenshot 2023-12-11 105840.png" alt="img-1"
+                            class="image-item">
+                        <h1 class="subtitle">Chick shop</h1>
+                        <p class="description" style="text-align: center;">user สามารถซื้อ<u>น่องไก่</u>ได้ที่ <u>Chick
+                                shop</u></p>
+                    </div>
                 </div>
                 <button class="slide-button" id="next-slide"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
