--- a/ChickChatLogIn/HowToUse.html
+++ b/ChickChatLogIn/HowToUse.html
@@ -39,13 +39,13 @@
                     <h1 class="subtitle">Like you</h1>
                     <p class="description">ในแต่ละวัน user สามารถส่ง <u>Like</u> ให้คู่สนทนาได้ไม่เกิน 10 ครั้ง โดย <u>Like</u> จะถูกแปรเปลี่ยนเป็น<u>น่องไก่</u></p>
                 </div>
-                <div>
-                    <img src="Image/IMG_0994.PNG" alt="img-1" class="image-item">
+                <div class="AvatarShop">
+                    <img src="../ImageAsset/ScreenShot/Screenshot 2023-12-11 105553.png" alt="img-1" class="image-item">
                     <h1 class="subtitle">Avatar shop</h1>
                     <p class="description">user สามารถตกแต่ง <u>avatar</u> ได้ตามความชอบโดยสามารถซื้อไอเท็มตกแต่งได้ที่ <u>Avatar shop</u> โดยจะใช้น่องไก่ในการซื้อ</p>
                 </div>
-                <div>
-                    <img src="Image/IMG_0995.PNG" alt="img-1" class="image-item">
+                <div class="ChickShop">
+                    <img src="../ImageAsset/ScreenShot/Screenshot 2023-12-11 105840.png" alt="img-1" class="image-item">
                     <h1 class="subtitle">Chick shop</h1>
                     <p class="description" style="text-align: center;">user สามารถซื้อ<u>น่องไก่</u>ได้ที่ <u>Chick shop</u></p>
                 </div>
