--- a/ChickChatDressing/clothes.html
+++ b/ChickChatDressing/clothes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,13 @@
     <link rel="stylesheet" href="clothes.css">
     <script src="https://kit.fontawesome.com/26997adfb2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="wrapper">
         <header>
-            <img src="image/IMG_1012.PNG" alt="">
+            <a href="http://localhost/Chat-Socket/ChickChatHome">
+                <img src="image/IMG_1012.PNG" class="inside-banner" alt="">
+            </a>
         </header>
         <div class="container">
             <div class="dressing">
@@ -46,11 +50,11 @@
                     <img src="../ImageAsset/Clothes/Clothes5.PNG" class="img img-5">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect6" data-image= "../ImageAsset/Clothes/Clothes13.PNG" onclick="checkStatus(this)">
+                <button class="clothes-item" id="clothesSelect6" data-image="../ImageAsset/Clothes/Clothes13.PNG" onclick="checkStatus(this)">
                     <img src="../ImageAsset/Clothes/Clothes13.PNG" class="img img-7">
                     <!-- <div class="lock"><i class="fa-solid fa-lock"></i></div> -->
                 </button>
-                <button class="clothes-item" id="clothesSelect7" data-image= "../ImageAsset/Clothes/Clothes7.PNG" onclick="checkStatus(this)">
+                <button class="clothes-item" id="clothesSelect7" data-image="../ImageAsset/Clothes/Clothes7.PNG" onclick="checkStatus(this)">
                     <img src="../ImageAsset/Clothes/Clothes7.PNG" class="img img-8">
                     <div class="lock"><i class="fa-solid fa-lock"></i></div>
                 </button>
@@ -71,4 +75,5 @@
     </div>
     <script src="clothes.js"></script>
 </body>
+
 </html>
