--- a/ChickChatDressing/face.html
+++ b/ChickChatDressing/face.html
@@ -13,7 +13,9 @@
 <body>
     <div class="wrapper">
         <header>
-            <img src="image/IMG_1012.PNG" alt="">
+            <a href="http://localhost/Chat-Socket/ChickChatHome">
+                <img src="image/IMG_1012.PNG" class="inside-banner" alt="">
+            </a>
         </header>
         <div class="container">
             <div class="dressing">
